syntax = "proto3";

package x.proxy;
option go_package = "github.com/5vnetwork/vx-core/app/configs/proxy";
import "protos/user.proto";

message AnytlsClientConfig {
  string password = 2;
  uint32 idle_session_check_interval = 3;
  uint32 idle_session_timeout = 4;
  uint32 min_idle_session = 5;
}

message AnytlsServerConfig {
  repeated x.UserConfig users = 1;
}